--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: base_project_setup
 description: A new Flutter project.
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
@@ -32,6 +32,7 @@ dependencies:
   firebase_messaging: ^14.6.0
   firebase_analytics: ^10.4.0
   shimmer: ^3.0.0
+  # uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
