--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   firebase_messaging: ^14.6.0
   firebase_analytics: ^10.4.0
   shimmer: ^3.0.0
-  # uuid: ^3.0.7
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
